--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_form"
     android:layout_width="match_parent"
@@ -26,6 +27,12 @@
             android:textSize="24sp" />
 
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="155dp"
+        android:layout_height="83dp"
+        app:srcCompat="@mipmap/ic_launcher"
+        android:id="@+id/imageView2" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -180,6 +187,7 @@
                 android:layout_height="wrap_content"
                 android:text="Choose a profil image"
                 android:onClick="chooseProfilImage"/>
+
         </LinearLayout>
 
 
