--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -98,6 +98,7 @@
         <Button
             android:id="@+id/button"
             android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_below="@+id/edit_signin_prenom"
             android:layout_centerHorizontal="true"
             android:layout_weight="1"
